--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CustomTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="DayTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/colorCustomPrimary</item>
+        <item name="colorPrimaryDark">@color/colorCustomDarkPrimary</item>
+        <item name="colorAccent">@color/colorCustomAccent</item>
+        <item name="colorSecondary">@color/colorCustomAccent</item>
+        <item name="colorOnSecondary">@color/white</item>
+    </style>
+
+    <style name="NightTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/colorCustomPrimary</item>
         <item name="colorPrimaryDark">@color/colorCustomDarkPrimary</item>
         <item name="colorAccent">@color/colorCustomAccent</item>
