--- a/app/src/main/res/drawable/oval_shape_widget.xml
+++ b/app/src/main/res/drawable/oval_shape_widget.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorCustomAccent" />
+    <solid android:color="@color/red_alert" />
     <corners android:radius="5dp"></corners>
     <size
         android:width="100dp"
