--- a/app/src/main/res/layout/activity_inregistrare.xml
+++ b/app/src/main/res/layout/activity_inregistrare.xml
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toTopOf="@+id/textViewSuma" />
 
     <Button
-        android:id="@+id/buttonTranzactie"
+        android:id="@+id/buttonInregistrare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/finalizeaza_inregistrarea"
