--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,57 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".Activities.WelcomeActivity">
 
-    <fragment
-        android:id="@+id/fragment3"
-        android:name="com.example.budgettracker.Fragments.WelcomeFragment1"
-        android:layout_width="307dp"
-        android:layout_height="332dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.353" />
-
-    <android.widget.Button
-        android:id="@+id/smallWidget1"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:background="@drawable/oval_shape_widget"
-        app:layout_constraintBottom_toBottomOf="@+id/smallWidget2"
-        app:layout_constraintEnd_toStartOf="@+id/smallWidget2"
-        app:layout_constraintHorizontal_bias="0.95"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/smallWidget2" />
-
-    <android.widget.Button
-        android:id="@+id/smallWidget2"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/oval_shape_widget"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment3" />
-
-    <android.widget.Button
-        android:id="@+id/smallWidget3"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:background="@drawable/oval_shape_widget"
-        app:layout_constraintBottom_toBottomOf="@+id/smallWidget2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toEndOf="@+id/smallWidget2"
-        app:layout_constraintTop_toTopOf="@+id/smallWidget2" />
-
     <Button
         android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:text="@string/continua"
-        android:onClick="onClickNext"
+        android:text="@string/incepeti_acum"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewInfoWelcome"
+        app:layout_constraintVertical_bias="0.110000014" />
+
+    <TextView
+        android:id="@+id/textViewWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:gravity="center"
+        android:text="@string/mesaj_welcome"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="263dp"
+        android:layout_height="233dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
+        app:srcCompat="@drawable/finances_red" />
+
+    <TextView
+        android:id="@+id/textViewInfoWelcome"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:gravity="center"
+        android:text="@string/info_welcome"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
